# engine

./: .env  .env.example  .gitignore  Cargo.toml  README.md  cubes.json  features.json  front_collision.json  game.json  marathon.json  neutralino.config.json  new_project.json  pyramide.json  speedy.json  squares.json
ansible/: README.MD  hosts  playbook.yml  uverworld_server
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/models/: mod.rs  peer.rs  user_id.rs
crates/display/: Cargo.toml
crates/display/src/: api.rs  extensions.rs  lib.rs  matchbox_socket.rs  states.rs  webrtc.rs
crates/display/src/assets/: blueprint.rs  blueprint_structure.rs  button_blueprint.rs  loading_screen.rs  mod.rs  modal_blueprint.rs  simulate_screen.rs
crates/display/src/cameras/: camera3d.rs  mod.rs
crates/display/src/entities/: entity.rs  mod.rs  ui_entity.rs
crates/display/src/events/: get_texture.rs  handle_image.rs  mod.rs  remove_texture.rs  set_simulation.rs  set_texture.rs  set_tick_rate.rs  simulate.rs  templates.rs  update_entities.rs  update_entity.rs  update_entity_group.rs
crates/display/src/filters/: mod.rs  scene_filter.rs
crates/display/src/scenes/: blueprint.rs  loading_screen.rs  main_menu.rs  mod.rs  simulate_screen.rs
crates/display/src/telemetry/: endpoint.rs  frame_time.rs  mod.rs  system_usage.rs
crates/profile/: Cargo.toml
crates/profile/src/: api_settings.rs  lib.rs  profile.rs  telemetry_settings.rs  tracer_settings.rs
crates/profile/src/models/: color.rs  direction.rs  entity.rs  entity_group.rs  location.rs  mod.rs  range.rs  shape.rs  sight_radius.rs  surface.rs  surface_group.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: exporter.rs  lib.rs  telemetry.rs  worker.rs
crates/telemetry/src/exporter/: exporter_error.rs  mod.rs
crates/telemetry/src/provider/: meter.rs  mod.rs  tracer.rs
crates/telemetry/src/worker/: meter_worker.rs  mod.rs  trace_worker.rs
crates/tracer/: Cargo.toml
docs/: doc_gestion_fenn.md  doc_neutralino.md
resources/: index.html  option.html  styles.css
resources/css/: main.css
resources/fonts/: fonts.css
resources/js/: main.js  openFile.js  openSquare.js  vars.js
resources/saves/: squares copy.json  squares.json
src/: main.rs
templates/: escape_test.json  follow_test.json  front_collision.json  front_heavy.json  front_heavy2.json  front_light.json  front_light_fast.json  front_light_fast.json.json  game.json  marathon.json  new_project.json  pyramide.json  speedy.json
wiki/: README.MD
wiki/design_and_structure/: PROFILE.MD  WEBRTC.MD
wiki/development_guides/: CREATE_A_NEW_ENTITYS_PARAMETER.MD  CREATE_A_NEW_SET_OF_ROUTES.MD
