[package]
name = "uverworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/*",
]

[dependencies]
client-display = { path = "crates/display" }
client-profile = { path  = "crates/profile" }

dotenv = "0.15.0"
clap = "4.4.8"

