[package]
name = "client-display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
client-profile = { path = "../profile/" }
api = { path = "../api/" }
rand = "0.8.5"
nalgebra = "0.32.2"
bevy_rapier3d = "0.21.0"
bevy_matchbox = { version = "0.6", features = ["ggrs"] }
