[package]
name = "client-display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client-profile = { path = "../profile" }
client-api = { path = "../api" }
client-telemetry = { path = "../telemetry" }

bevy = "0.11.2"
bevy_egui = "0.22.0"
rand = "0.8.5"
nalgebra = "0.32.2"
bevy_rapier3d = "0.22.0"
bevy_matchbox = { version = "0.7.0", features = ["ggrs"] }
opentelemetry = "0.21.0"
sys-info = "0.9.1"
