[package]
name = "client-display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client-profile.workspace = true
client-api.workspace = true
client-telemetry.workspace = true

uverworld_packet.workspace = true

sys-info.workspace = true
bevy.workspace = true
bevy_egui.workspace = true
nalgebra.workspace = true
bevy_rapier3d.workspace = true
bevy_matchbox.workspace = true
opentelemetry.workspace = true
