[package]
name = "client-telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = "0.21.0"
opentelemetry_sdk = { version = "0.21.0", features = ["rt-async-std"] }
opentelemetry-proto = { version = "0.4.0", default-features = false, features = ["gen-tonic-messages", "trace", "metrics"] }
reqwest = "0.11.23"
futures-core = "0.3.28"
prost = "0.11.9"
tokio = "1.35.1"
async-trait = { version = "0.1.69", features = [] }
