[package]
name = "client-telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-proto.workspace = true
reqwest.workspace = true
futures-core.workspace = true
prost.workspace = true
tokio.workspace = true
